[package]
name = "satoshi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream = "0.3.3"
clap = { version = "4.1.4", features = ["derive"] }
console-subscriber = { version = "0.1.8", optional = true }
nohash-hasher = "0.2.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rpds = "0.12.0"
tokio = { version = "1.25.0", features = ["full", "tracing"] }
tokio-stream = "0.1.11"

[profile.release]
debug = true

[features]
tracing = ["console-subscriber"]
